deleta aviso só em aviso já existente

--- a/operacional/templates/operacional/edita_aviso.html
+++ b/operacional/templates/operacional/edita_aviso.html
@@ -56,16 +56,19 @@
       <br><br>
 
       <button type="submit">Atualizar Aviso</button>
-      &nbsp;&nbsp;
-      <button type="button" id="apagar">Apagar Aviso</button>
 
-      <script type="text/javascript">
-        $('#apagar').click(function() {
-          if(confirm('Are you sure?')){
-            window.location = "{% url 'deleta_aviso' aviso.id %}";
-          }
-        });
-      </script>
+      {% if aviso %}
+        &nbsp;&nbsp;
+        <button type="button" id="apagar">Apagar Aviso</button>
+
+        <script type="text/javascript">
+          $('#apagar').click(function() {
+            if(confirm('Are you sure?')){
+              window.location = "{% url 'deleta_aviso' aviso.id %}";
+            }
+          });
+        </script>
+      {% endif %}
 
       <p>&nbsp;</p>
     </form>
