--- a/templates/generic.html
+++ b/templates/generic.html
@@ -61,4 +61,7 @@
         <a href="{% url 'index' %}">Voltar para Página Principal!</a><br>
     {% endif %}
 
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
 {% endblock %}
