melhor exibição dos links dos documentos

--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -79,7 +79,7 @@
             <th scope="col" style="text-align: center;width:auto;">Documentos</th>
           </tr>
         </thead>
-
+        <tbody>
         {% for projeto in projetos %} 
             <tr class="item">
               <td>
@@ -318,6 +318,7 @@
             </tr>
           
         {% endfor %}
+          </tbody>
       </table>
 
     </div>
