--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -13,7 +13,15 @@
     td {
       padding: 8px;
     }
-</style>
+
+    .short-text { display: none; white-space: nowrap; }
+    .full-text { white-space: nowrap; }
+
+    @media (max-width: 1200px) {
+        .short-text { display: inline-block; }
+        .full-text { display: none; }
+    }
+  </style>
 
   <script src="{% static 'js/w3.js' %}"></script>
 
@@ -27,15 +35,20 @@
   <span class="titulo">Relatórios Públicos</span>
 
   {% if relatorios %}
-    <table id="RelatoriosTable">
-      <tr>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
-        <th class="text-center">Estudantes</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Período</th>
-        <th class="text-center">Documento</th>
-      </tr>      
+  <div class="table-responsive">
+
+    <table id="RelatoriosTable" class="table table-bordered table-hover table-sm" style="width: auto;">
+      <thead class="table-info">
+        <tr>
+          <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
+          <th class="text-center">Estudantes</th>
+          <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
+          <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
+          <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Período</th>
+          <th class="text-center">Documento</th>
+        </tr>
+      </thead>
+      <tbody>
       {% for relatorio in relatorios %}
 
         {% if relatorio.link and relatorio.projeto %}
@@ -67,11 +80,8 @@
               {% endfor %}
             </td>
 
-
             <td>
-
               {% if relatorio.projeto.orientador %}
-
                 {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                   <a href="{% url 'professor_detail' relatorio.projeto.orientador.id %}">
                 {% endif %}
@@ -79,9 +89,7 @@
                 {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                   </a>
                 {% endif %}
-
               {% endif %}
-
             </td>
 
             <td>
@@ -100,10 +108,16 @@
 
             <td>
                 {% if relatorio.link%}
-                  <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">{{relatorio.link}}</a><br>
+                  <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                    <span class="full-text">{{relatorio.link}}</span>
+                    <span class="short-text">Link DSpace</span>
+                  </a><br>
                 {% endif %}
                 {% if relatorio.documento%}
-                  <a href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}</a>
+                  <a href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
+                    <span class="full-text">http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}</span>
+                    <span class="short-text">Link PFE</span>
+                  </a>
                 {% endif %}
             </td>
 
@@ -112,7 +126,9 @@
           {% endif %}
 
       {% endfor %}
+      </tbody>
     </table>
+  </div>
   {% else %}
     <p>Não existem relatórios disponíveis.</p>
   {% endif %}
