controle de envio de conta individual

--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -17,7 +17,7 @@
     <a href="{% url 'cadastrar_usuario' %}"><h5>Cadastrar Usuário</h5></a>
 
     <hr>
-    <a href="{% url 'contas_senhas' '2020.2' %}"><h5>Envia Contas e Senhas</h5></a>
+    <a href="{% url 'contas_senhas' %}"><h5>Envia Contas e Senhas</h5></a>
 
     <hr>
     <a href="{% url 'exportar' %}"><h5>Relatórios/Exportar dados</h5></a>
