--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -276,6 +276,15 @@
     Ainda não existem anotações para essa organização.
   </span>
   
+  {% if user.tipo_de_usuario == 4 %}
+    <a href="{% url 'edita_organizacao' organizacao.id %}">
+    <button style="float: right;">Editar</button>
+    </a>
+  {% endif %}
+
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
   {% include "documento-modal.html" %}
   {% include "annotation-modal2.html" %}
 
