--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -67,6 +67,14 @@
     .dragging {
         background-color: gold;
     }
+
+    #logotipo {
+      max-height:64px;
+      max-width:64px;
+      height:auto;
+      width:auto;
+    }
+    
   </style>
 
 {% endblock %}
@@ -80,21 +88,25 @@
 
   <span class="titulo">Montar Grupos</span>
 
-  {% comment %}
-  <label for="filter">Edição:</label>
-  <select id="filter" onchange="location = this.options[this.selectedIndex].value;">
-    {% for loop in loop_anos %}
-      <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
-      <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
-    {% endfor %}
-  </select>
-  {% endcomment %}
-
   {% if propostas %}
 
     {% for proposta in propostas %}   
+
+    <div style="width: 100%; display: table;">
+
+    <div style="display: table-row;">
+
+      <div style="display: table-cell; vertical-align: middle; width: 68px;">
+        {% if proposta.organizacao.logotipo %}
+          <img id="logotipo" src="{{ proposta.organizacao.logotipo.url }}" alt="{{ proposta.organizacao.sigla }}">
+        {% endif %}
+      </div>
+
       <div id="proposta{{proposta.id}}" class="proposta" data-propostaid="{{proposta.id}}">
-        <div id="titulo{{proposta.id}}" class="etiqueta_proposta">
+
+        
+        <div id="titulo{{proposta.id}}" class="etiqueta_proposta" >
+
           <a target="_blank" rel="noopener noreferrer" class="ancora" href="{% url 'proposta_completa' proposta.id %}" style="color: #000062;"
           data-toggle="tooltip" data-html="true" animation="true" title="
                 {% for opcaop in proposta.opcao_set.all %}
@@ -139,6 +151,10 @@
             PROBLEMA EM RECUPERAR ORGANIZAÇÃO DA PROPOSTA
           {% endif %}
         </div>
+
+      </div>
+
+    </div>
       </div>
       <br><br>
     {% endfor %}
