espaço entre linhas

--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -92,7 +92,7 @@
 
     {% for proposta in propostas %}   
 
-    <div style="width: 100%; display: table;">
+    <div style="width: 100%; display: table; border-collapse:separate; border-spacing: 8px;">
 
     <div style="display: table-row;">
 
@@ -155,8 +155,8 @@
       </div>
 
     </div>
-      </div>
-      <br><br>
+    </div>
+
     {% endfor %}
 
   {% else %}
