--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -9,6 +9,8 @@
 
   {% load static %}
   {% load aderencia_aluno %}
+
+  <script src="{% static 'js/Chart.min.js' %}"/></script>
   
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
@@ -181,6 +183,11 @@
   <input id="vazia" type="checkbox" name="vazia" checked onchange="escondePropostas()"/>
   <label for="vazia">Propostas Vazias: <span id="vazias">-</span></label><br>
   
+  <br><br>
+  <div class="grafico" id="canvas-holder">
+    <canvas id="chart-area"></canvas>
+  </div>
+
   <p>&nbsp;</p>
 
   <script>
@@ -233,8 +240,20 @@
           }
         }
       }
+      var anterior = estudante.find(".opcao > span").html();
       estudante.find(".opcao > span").html(opcao);
+
+      return [anterior, opcao];
     }
+
+    count_alunos = 0;
+    prioridade1 = 0;
+    prioridade2 = 0;
+    prioridade3 = 0;
+    prioridade4 = 0;
+    prioridade5 = 0;
+    prioridade6m = 0;
+    nao_definido = 0;
 
     {% for estudante, opcoes in estudantes_opcoes %}
       {% if estudante.pre_alocacao %}
@@ -264,13 +283,35 @@
       </div>
       `);
       {% if estudante.pre_alocacao %}
-        cor_estudante($("#estudante{{estudante.id}}"), {{estudante.pre_alocacao.id}})
+        
+        opcao = cor_estudante($("#estudante{{estudante.id}}"), {{estudante.pre_alocacao.id}})
+
+        // Para o gráfico
+
+        if(opcao[1] == "X") nao_definido += 1;
+        else if(opcao[1] == 1) prioridade1 += 1;
+        else if(opcao[1] == 2) prioridade2 += 1;
+        else if(opcao[1] == 3) prioridade3 += 1;
+        else if(opcao[1] == 4) prioridade4 += 1;
+        else if(opcao[1] == 5) prioridade5 += 1;
+        else prioridade6m += 1;
+
+      {% else %}
+        nao_definido += 1;
       {% endif %}
+      
+      count_alunos += 1;
+
     {% endfor %}
+    
 
+    </script>
 
+    {% comment %} Mostra gráfico de proporção de prioridades {% endcomment %}
+    {% include "grafico_prioridades.html" %}
+    
+    <script>
     /* ------- */
-
     var $draggedItem;
 
     $(document).ready(function() {
@@ -286,6 +327,8 @@
         $('.proposta').each(function(index, element) {
           ordenaCR($(this), "div");
         });
+
+        mostra_grafico();
 
     });
 
@@ -369,11 +412,13 @@
         },
         dataType: 'json',
         success: function (data) {
-          if (data.atualizado) {
-            console.log("Valor atualizado.");
-          } else {
-            console.log("Valor não atualizado.");
-          }
+          {% comment %}
+            if (data.atualizado) {
+              console.log("Valor atualizado.");
+            } else {
+              console.log("Valor não atualizado.");
+            }
+          {% endcomment %}
         },
         error: function (request, status, error) {
           {% if user.tipo_de_usuario == 4 %} 
@@ -405,9 +450,51 @@
           $draggedItem.detach();
           $draggedItem.appendTo(final_target);
           send_update($draggedItem[0].id, final_target[0].id)
-          cor_estudante($draggedItem, final_target.data("propostaid"))
-  
+          
           ordenaCR(final_target, "div");
+
+          opcao = cor_estudante($draggedItem, final_target.data("propostaid"))
+
+          // Para o gráfico
+          if(opcao[0] == "X" || opcao[0] == undefined ) nao_definido -= 1;
+          else if(opcao[0] == 1) prioridade1 -= 1;
+          else if(opcao[0] == 2) prioridade2 -= 1;
+          else if(opcao[0] == 3) prioridade3 -= 1;
+          else if(opcao[0] == 4) prioridade4 -= 1;
+          else if(opcao[0] == 5) prioridade5 -= 1;
+          else prioridade6m -= 1;
+
+          
+          if(opcao[1] == "X" || opcao[1] == undefined ) nao_definido += 1;
+          else if(opcao[1] == 1) prioridade1 += 1;
+          else if(opcao[1] == 2) prioridade2 += 1;
+          else if(opcao[1] == 3) prioridade3 += 1;
+          else if(opcao[1] == 4) prioridade4 += 1;
+          else if(opcao[1] == 5) prioridade5 += 1;
+          else prioridade6m += 1;
+
+          dados = [
+            prioridade1,
+            prioridade2,
+            prioridade3,
+            prioridade4,
+            prioridade5,
+            prioridade6m,
+          ];
+
+          labels = [
+            '#1 ['+parseInt(100*prioridade1/(count_alunos-nao_definido))+'%]',
+            '#2 ['+parseInt(100*prioridade2/(count_alunos-nao_definido))+'%]',
+            '#3 ['+parseInt(100*prioridade3/(count_alunos-nao_definido))+'%]',
+            '#4 ['+parseInt(100*prioridade4/(count_alunos-nao_definido))+'%]',
+            '#5 ['+parseInt(100*prioridade5/(count_alunos-nao_definido))+'%]',
+            '#>=6 ['+parseInt(100*prioridade6m/(count_alunos-nao_definido))+'%]',
+          ]
+
+          window.myPie.data.datasets[0].data = dados;
+          window.myPie.data.datasets[0].labels = labels;
+          window.myPie.update();
+
         }
 
       }
