--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -158,21 +158,17 @@
         </div>
 
         <div style="width: 1.0em; vertical-align:middle; margin-left: 4px;">
-          <tt style="font-size: smaller;">
-            {% if proposta.perfil_aluno1_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno1_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno1_mecatronica %}X{% else %}&nbsp;{% endif %}
-            <br>
-
-            {% if proposta.perfil_aluno2_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno2_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno2_mecatronica %}X{% else %}&nbsp;{% endif %}
-            <br>
-            
-            {% if proposta.perfil_aluno3_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno3_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno3_mecatronica %}X{% else %}&nbsp;{% endif %}
-            <br>
-            
-            {% if proposta.perfil_aluno4_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno4_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno4_mecatronica %}X{% else %}&nbsp;{% endif %}
-            <br>
-            
-          </tt>
-          {% comment %} {{ proposta.organizacao.logotipo.url }} {% endcomment %}
+          <a class="ancora" style="color: #000062;" data-toggle="tooltip" data-html="true" animation="true" title=
+          "{% for rec in proposta.recomendada_set.all %}
+            {{rec.disciplina.nome}}<br>
+          {% endfor %}">
+            <tt style="font-size: smaller;">
+              {% if proposta.perfil_aluno1_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno1_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno1_mecatronica %}X{% else %}&nbsp;{% endif %}<br>
+              {% if proposta.perfil_aluno2_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno2_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno2_mecatronica %}X{% else %}&nbsp;{% endif %}<br>
+              {% if proposta.perfil_aluno3_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno3_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno3_mecatronica %}X{% else %}&nbsp;{% endif %}<br>
+              {% if proposta.perfil_aluno4_computacao %}C{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno4_mecanica %}M{% else %}&nbsp;{% endif %}{% if proposta.perfil_aluno4_mecatronica %}X{% else %}&nbsp;{% endif %}<br>
+            </tt>
+          </a>
         </div>
 
       </div>
