filtro para conceitos

--- a/projetos/templates/projetos/certificacao_falconi.html
+++ b/projetos/templates/projetos/certificacao_falconi.html
@@ -47,14 +47,14 @@
 
     function conceito(nota) {
         if( nota >= 9.5 ) return ("A+")
-        if( nota >= 8.5 ) return ("A")
-        if( nota >= 7.5 ) return ("B+")
-        if( nota >= 6.5 ) return ("B")
-        if( nota >= 5.5 ) return ("C+")
-        if( nota >= 4.5 ) return ("C")
-        if( nota >= 3.5 ) return ("D+")
-        if( nota >= 2.5 ) return ("D")
-        if( nota >= 1.5 ) return ("D-")
+        if( nota >= 9.0 ) return ("A")
+        if( nota >= 8.0 ) return ("B+")
+        if( nota >= 7.0 ) return ("B")
+        if( nota >= 6.0 ) return ("C+")
+        if( nota >= 5.0 ) return ("C")
+        if( nota >= 4.0 ) return ("D+")
+        if( nota >= 3.0 ) return ("D")
+        if( nota >= 2.0 ) return ("D-")
         return ("I")
     }
 
@@ -158,8 +158,7 @@
         
         var media_final = this.media();
         descricao += "<b style='font-size: 1.16em;'>";
-        descricao += conceito(media_final);
-        descricao += "("+media_final.toPrecision(3)+")";
+        descricao += media_final.toPrecision(3);
         descricao += "</b>";
         descricao += '</span>';
 
